<resources>
    <string name="app_name">Student Management System</string>
    <string name="add_student_details">Add Student Details</string>
    <string name="student_individual_string">STUDENT_VALUES</string>
    <string name="details_student">Student Details</string>
    <string name="namehint">Enter Name</string>
    <string name="rollhint">Roll Number</string>
    <string name="standardhint">Standard</string>
    <string name="agehint">Age</string>
    <string name="save_student_button">Save Student</string>
    <string name="update_student_button">Update Student</string>
    <string name="update_student">Update Student</string>
    <string name="add_student_button">Add Student</string>
    <string name="userchoice_dbhandle_alert">How do you want the Database to be handled?</string>
    <string name="alert_service">Service</string>
    <string name="alert_intentservice">Intent Service</string>
    <string name="alert_async">Asynctasks</string>
    <string name="update_student_operation">updateIt</string>
    <string name="add_student_operation">addIt</string>
    <string name="student_for_db">studentForDb</string>
    <string name="operation_on_student">operationOnStudent</string>
    <string name="want_to_delete_or_not">Do you really want to delete this Student?</string>
    <string name="deletetitle">Delete Student</string>
    <string name="deleteconfirm">Delete</string>
    <string name="deletecancel">cancel</string>
    <string name="sortbyname">Sorted By Name</string>
    <string name="sortbyroll">Sorted By Roll No.</string>
    <string name="namecantbeempty">Name cannot be Empty</string>
    <string name="enteralphabetsonly">Enter Valid Name</string>
    <string name="valid_roll_error">Valid Roll Number between 1 - 100</string>
    <string name="rolliderror">Roll Id already exists</string>
    <string name="ageerror">Age should be between 7 - 18</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="alertchoice">Choose from below</string>
    <string name="viewitem">View</string>
    <string name="edititem">Edit</string>
    <string name="deleteitem">Delete</string>
    <string name="standarderror">Standard should be between 1 - 12</string>
    <string name="agetv">Age</string>
    <string name="standardtv">Standard</string>
    <string name="roll_notv">Roll No.</string>
    <string name="nametv">Name</string>
    <string name="standarderror1">Standard should be between 1 - 12</string>
    <string name="rollerror">Roll No. cant be empty</string>
    <string name="namevalidstring">Enter Valid Name</string>
    <string name="rollvalidstring">Enter Valid Roll</string>
    <string name="uniquerollstring">Roll Id already exists</string>
</resources>
